       character classes (PCRE1 treated these as literals).

       Option \code{PCRE_study} is no longer used, and reported as
       \code{FALSE}.

       The version of PCRE used can be obtained via
       \code{extSoftVersion()}, PCRE1 has versions < 10, PCRE2 versions
       >= 10.

       \item For now only active when environment variable
       \env{_R_CLASS_MATRIX_ARRAY_} is set to non-empty, but planned to be the
       new unconditional behavior when R 4.0.0 is released:

       \code{matrix} objects now also inherit from class \code{"array"},
       namely, e.g., \code{class(diag(1))} is \code{c("matrix",
       "array")} which invalidates code assuming that
       \code{length(class(obj)) == 1}, an incorrect assumption that is
       less frequently fulfilled now.

       S3 methods for \code{"array"}, i.e., \code{<someFun>.array()}, are
       now also dispatched for \code{matrix} objects.

       \item \R now uses reference counting instead of the \code{NAMED}
       mechanism for determining when objects can be safely mutated in
       base C code. This reduces the need for copying is some cases and
       should allow further optimizations in the future. It should also
       help make the internal code easier to maintain. This change is
       expected to have minimal impact on packages not using unsupported
       coding practices in their C/C++ code.
    }
  }

  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{assertError()} and \code{assertWarning()} (in package
      \pkg{tools}) can now check for \emph{specific} error or warning
      classes \emph{via} the new optional second argument \code{classes}
      (which is not back compatible with previous use of an unnamed second
      argument).

      \item \code{DF2formula()}, the utility for the data frame method of
      \code{formula()}, now works without parsing and explicit evaluation,
      starting from Suharto Anggono's suggestion in \PR{17555}.
